Fix minor misalignment

--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -8,7 +8,7 @@ header {
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
-  padding: 0.25em;
+  padding: 0.25rem;
   margin: 0;
 }
 
@@ -21,7 +21,7 @@ h2 {
   border-radius: 4px;
   font-size: 1rem;
   margin: 0;
-  padding: 0.25em;
+  padding: 0.25rem;
 }
 .clear:hover {
   color: white;
@@ -31,5 +31,5 @@ h2 {
 section div {
   background-color: #f4f4f4;
   font-family: 'Courier New', Courier, monospace;
-  padding: 0.25em;
+  padding: 0.25rem;
 }
